# tradingbot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: debug_gamma.py  debug_markets.py  lookup_market.py  run_bot.py  run_mean_reversion.py  test_auth.py  test_fase0.py  test_fase1.py  test_fase2.py  test_fase3.py  test_fase4.py
src/bots/: __init__.py  base.py
src/bots/arb_intramarket/: __init__.py  bot.py
src/bots/mean_reversion/: __init__.py  bot.py  detector.py  trade_logger.py
src/clob/: __init__.py  client.py  gamma_client.py  models.py
src/config/: __init__.py  logging.py  settings.py
src/metrics/: __init__.py  collector.py
src/risk/: __init__.py  manager.py
src/runner/: __init__.py  main.py  registry.py
src/ui/: __init__.py  components.py  log_handler.py  tui.py
src/watchlist/: __init__.py  manager.py  scorer.py
src/ws/: __init__.py  client.py  orderbook.py
tests/: test_mean_reversion.py
